# dozer-detector

./: .gitignore  README.md  pyproject.toml
artifacts/historical-tensorflow/: README.md
blender/: README.md
demo/tfjs/: README.md  blur.ts  drawBoxes.ts  package-lock.json  package.json  postprocess.ts  vite.config.ts
demo/tfjs/modern/: index.html
demo/tfjs/modern/src/: App.tsx  CanvasStage.tsx  ControlPanel.tsx  ModelApp.tsx  constants.ts  main.tsx  styles.css  useDetectionLoop.ts  useMediaFps.ts  usePreprocessKernel.ts
demo/tfjs/public/: zach_model
docs/: limitations.md  recovery-notes.md  synthetic-training-pipeline.md
docs/plans/: 2026-05-23-code-organization-design.md  2026-05-25-reconstruction-notebook-design.md
models/: README.md
notebooks/: 01_reconstruct_dataset.ipynb  02_evaluate_historical_assets.ipynb
scripts/: rebuild_dozer_dataset.py  render_blender_captures.py  validate_dataset.py
